# ng_2509

./: .gitignore  README.md  gtts_test.py  gtts_voice.py  pyttsx3_text.py
chat-agent-mvp/: .gitignore  package-lock.json  package.json  setup_mvp.py  tailwind.config.ts  tsconfig.json
chat-agent-mvp/app/: layout.tsx  page.tsx
chat-agent-mvp/app/api/ask/: route.ts
chat-agent-mvp/app/api/delete/: route.ts
chat-agent-mvp/app/api/diary/delete/: route.ts
chat-agent-mvp/app/api/diary/get/: route.ts
chat-agent-mvp/app/api/diary/month/: route.ts
chat-agent-mvp/app/api/diary/save/: route.ts
chat-agent-mvp/app/api/finish/: route.ts
chat-agent-mvp/app/api/save/: route.ts
chat-agent-mvp/app/api/start/: route.ts
chat-agent-mvp/backend/: main.py  pyproject.toml
chat-agent-mvp/backend/api/: api.py
chat-agent-mvp/backend/api/routes/: chat.py  diaries.py
chat-agent-mvp/backend/services/: agent_services.py
chat-agent-mvp/components/: Chat.tsx  Diary.tsx  Editor.tsx
chat-agent-mvp/python/: agent.py  delete_logs.py  diary_delete.py  diary_get.py  diary_list_month.py  diary_save.py  dump_logs.py  history.py  init_logs.py  save_text_by_date.py  voice.py
chat-agent-mvp/python/logs/: 2025-10-11.txt  conversation.txt
chat-agent-mvp/styles/: globals.css
