[project]
name = "jphacks-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "hayashi1917",email = "kusagamebibinnba@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "openai (>=2.3.0,<3.0.0)",
    "pydantic (>=2.12.0,<3.0.0)",
    "logging (>=0.4.9.6,<0.5.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain-google-genai (>=2.1.12,<3.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
